Added comments to student's code.

--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -31,8 +31,18 @@
             <p>Model-based approaches also enhance communication and collaboration among stakeholders. Complex digital systems often involve multidisciplinary teams with different expertise and priorities. Models provide a shared language that helps align understanding across technical and non-technical stakeholders. This transparency supports better decision-making and ensures that system designs align with organizational goals and user needs.</p>
             <p>Finally, systems thinking and model-based design contribute to long-term adaptability. Digital systems must evolve in response to technological advances, changing user expectations, and shifting external constraints. Systems designed with a holistic understanding of structure and behavior are more flexible and easier to modify without introducing instability. This adaptability is essential in today’s rapidly changing digital environment, where rigid systems quickly become obsolete.</p>
             <p>In conclusion, systems thinking offers a powerful framework for understanding and addressing complexity by focusing on relationships, feedback loops, and system-wide behavior. Unlike traditional linear thinking, which assumes simple cause-and-effect relationships, systems thinking recognizes interdependence, nonlinearity, and unintended consequences. A model-based approach supports systems thinking by providing tools to represent, analyze, and simulate complex systems before they are built. Together, systems thinking and model-based design enable the creation of digital systems that are resilient, adaptable, and capable of meeting the challenges of an increasingly interconnected world (Holt, 2019; Meadows, 2008; INCOSE, 2020).</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
+<!--INSTRUCTOR COMMENT: Go ahead and delete this line.-->            <h3>Blue Roof Pour-Over Man Bun</h3>
                 <h3>Sources: </h3>
+
+<!--INSTRUCTOR COMMENT: You'll need to restructure the list of references to use an ordred list; for example:
+
+            <ol>
+                <li>First reference</li>
+                <li>Second reference</li>
+               <li>Third reference</li>
+            </ol>
+-->
+
                 <P>International Council on Systems Engineering. (2020). INCOSE systems engineering handbook (5th ed.). Wiley.</P>
                 <p>Meadows, D. H. (2008). Thinking in systems: A primer. Chelsea Green Publishing.</p>
                 <p>Yablonski, J. (2020). Laws of UX: Using psychology to design better products & services. O’Reilly Media.</p>
