Creation Blog Post 1.2
Created Blog Post 1.2 - The Systems Development Life Cycle

--- a/pottsm/index.html
+++ b/pottsm/index.html
@@ -81,6 +81,93 @@
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
+          <article>
+            <header class="article-header">
+               <h2 style="text-align: center;">Module 1.2 Blog Post - The Systems Development Life Cycle</h2>
+            </header>
+            <h3 style="text-align: center;">Introduction</h3>
+            <p style="text-indent: 2em;">Like any project or goal, a well-developed plan must be created initially to address any potential issues that may arise through out development. Without a plan, those issues may create delays or, in worse case scenarios, require a project to be abandoned. This post will explore the Systems Development Life Cycle (SDLC) and three life cycle models, linear, iterative, and incremental. It will define the SDLC, examine the models, identifying advantages and disadvantages, and reflect on how the life cycle aids in designing, sustaining, and evolving digital systems.</p>
+            <h3 style="text-align: center;">The Systems Development Life Cycle</h3>
+            <p style="text-indent: 2em;">When designing new digital systems, the Systems Development Life Cycle approach is utilized to guide teams through the process. This framework is comprised of multiple steps and developmental processes that come together to describe the full journey of a system. This “full journey” includes identifying a specific need, the design and implementation, as well as maintenance, and if applicable, end of life.
+Developing a new system without a life cycle framework in place can create many problems. Requirements may not be met or defined properly, systems may become too difficult to maintain, or decisions are not consistent across teams. The SDLC is designed to provide clarity and a predictable structure when creating complex digital systems. It helps to bring coordination between teams, helping to manage potential risks, and aligns everyone involved with the needs of the user and the goals of the organization.
+</p>
+<h3 style="text-align: center;">Phases of SDLC</h3>
+<p style="text-indent: 2em;">No system is static, meaning they are constantly changing over time. They will evolve, degrade, and function differently depending on changes to its environment. This requires phases the flexibility to be altered, reclassified, and even omitted depending on the needs of the system. Most SDLC models will include the following phases:</p>
+<ul style="list-style-type: none; padding-left: 0;">
+  <li><b>Planning:</b> This initial phase is crucial in setting the tone for the entire cycle. Teams will use this phase to list feature requirements and ground the project into something actionable. During this stage, teams won’t specify how they will implement certain features or functionality and the programming languages aren’t typically chosen (Tozzi, 2024).</li><br>
+  <li><b>Analysis:</b> This phase defines the user needs and the requirements for the system. Teams will create a plan that identifies any constraints and how they can implement feature needs surfaced during the planning phase.</li><br>
+  <li><b>Design:</b> During the design phase of the SDLC, teams will create the database models and interfaces end users will interact with. System components are also defined, providing teams with technical guidance for future phases.</li><br>
+  <li><b>Implementation:</b> This phase can sometimes be named Development, but the definition is still the same. Within this phase, the actual code used to develop the system is built.</li><br>
+  <li><b>Testing:</b> The Testing phase can only be met when the code has been written from the previous implementation phase. This phase involves verifying the functionality of the system, its security, and reliability.</li><br>
+  <li><b>Deployment:</b> This phase is the first one in which the end user can interact with the newly developed system. </li><br>
+  <li><b>Maintenance:</b> The final phase in the SDLC is the maintenance phase. Within this phase, the system is monitored, and a process is set in place to update, fix, and improve the system over its lifetime.</li><br>
+</ul>
+<h3 style="text-align: center;">Linear Life Cycle Models</h3>
+<h4>Characteristics</h4>
+<p style="text-indent: 2em;">The Linear Life Cycle Model is constructed of a sequential progression path through the different SDLC phases. One example of a linear life cycle model is the Waterfall model, in which each phase is initiated only after the completion of the previous phase, with no way to circle back around to a previous phase (Holt, 2023).</p>
+<h4>Advantages and Disadvantages</h4>
+<p style="text-indent: 2em;">The linear model excels in projects that are small and are predictable. Because of well-defined requirements created early in the process, it requires straightforward planning that is easy to understand and manage. That requirement is also one of its biggest drawbacks as the linear model struggles to perform in complex environments where needs evolve. Due to the progression of the linear model, testing often occurs near the end of the cycle which may cause problems to surface too late to repair.
+This model is ideal for industries that rely on control and predictability; however, within the more complex and face-paced digital environments, the drawbacks associated with the linear model can potentially have a significant negative impact on the stability of system.
+</p>
+<h3 style="text-align: center;">Iterative Life Cycle Models</h3>
+<h4>Characteristics</h4>
+<p style="text-indent: 2em;">The Iterative model is a much more flexible option compared to the linear model. Instead of building out a system all at once, a version of the system is created by teams, which is then evaluated, and improved on in future iterations. Each iteration of the system includes phases separate from each version. Each life cycle is repeated and again, being refined each time.</p>
+<h4>Advantages and Disadvantages</h4>
+<p style="text-indent: 2em;">One of the main advantages of the iterative model is the ability to have an early working version of the system available to users. This provides you with quicker feedback and helps to build trust through continuous improvements that align more with user needs and expectations (Half, 2025). Like the linear model, the iterative model also has drawbacks tied directly to its advantages. Without proper feedback from stakeholders, the ability to improve on user issues becomes increasingly difficult throughout the systems life. Additionally, if there are no parameters set into place on an iteration, the potential for scope creep rises. 
+The iterative model is perfect for complex systems that have a high level of uncertainty attached to them as its flexible nature allows teams to pivot when an issue surfaces. In a complex digital system, the need for flexibility is key when working with changing stakeholder needs.
+</p>
+<h3 style="text-align: center;">Incremental Life Cycle Models</h3>
+<h4>Characteristics</h4>
+<p style="text-indent: 2em;">The incremental model is like the iterative model in that both systems build on each other expanding and refining components. The difference being that the incremental model breaks down the system into easier to manage chunks. Each increment has its own phases like the iterative model, but adds new functionality to the previous release, continuing until the system is complete, coining the alternative term “Iterative Enhancement” approach (TpointTech, 2025).</p>
+<h4>Advantages and Disadvantages</h4>
+<p style="text-indent: 2em;">The incremental model allows for greater scalability as new increments can be added when user needs change over time. It also provides a quicker way for users to try new features through the different increments instead of waiting for the entire system to be completed. While this model provides a great way to see a system function in its final form early on, it is not suitable for systems that can’t be broken down into subsets (Holt, 2023).
+Incremental models are ideal for modern digital environments as they allow for continuous improvement when technology and the user’s needs change. Issues may arise with projects that are poorly planned or communication between teams is insufficient.
+</p>
+<h3 style="text-align: center;">Why Life Cycle Thinking is Important for Digital Systems</h3>
+<p style="text-indent: 2em;">The purpose of implementing life cycle thinking into digital systems is to help create a strong structural foundation for the system that encompasses its entire lifespan. It helps to support the sustainability of a system.
+For designers and engineers, they can consider multiple areas of the system’s lifespan, such as how scalable the system is, how will the system be maintained, is it future-proof, and will it ever need to be replaced. It helps to reduce the risk of uninformed short-term decisions.
+As stated earlier, the system is not static. It requires constant updates, improvements, and patches. Without utilizing life cycle thinking, you could build a system that may function but would degrade rapidly over time. Making sure your system has resources properly allocated and there is sufficient documentation available for maintenance ensures you are supporting sustainability throughout the system’s lifespan.
+Systems that are unable to evolve over time will become obsolete extremely fast. Life cycle thinking ensures that a system is built to be adaptable. Within a digital system, so many areas constantly change, whether that is a user need, the technology running the system, or laws are set in place, being able to pivot is crucial.
+</p>
+<h3 style="text-align: center;">Conclusion</h3>
+<p style="text-indent: 2em;">Trying to build a digital system without a structured framework is like trying to build a house without a blueprint. You may be able to construct something that is functional initially, but over time, the cracks will start to appear and may be irreversible. Implementing SDLC models offers stability to make sure your system functions properly. It helps teams to anticipate unforeseen changes and manage large, complex processes, while building systems that can improve and evolve over time.</p>
+<footer class="article-footer">
+                <section id="sources">
+  <h3 style="text-align: center;">Sources</h3>
+  <ol>
+    <li>
+      Half, R. (2025, August 16). <em>6 effective SDLC models: Which one is best?</em> 
+      Retrieved from Robert Half Web Site: 
+      <a href="https://www.roberthalf.com/au/en/insights/management-tips/6-basic-sdlc-methodologies-which-one-best">
+        https://www.roberthalf.com/au/en/insights/management-tips/6-basic-sdlc-methodologies-which-one-best
+      </a>
+    </li><br>
+
+    <li>
+      Holt, J. (2023). <em>Defining a linear Life Cycle Model.</em> 
+      In J. Holt, <em>Systems Engineering Demystified</em> (2nd ed., pp. 145, 149). 
+      Birmingham: Packt Publishing.
+    </li><br>
+
+    <li>
+      Tozzi, C. (2024, April 18). <em>The 7 stages of the SDLC explained.</em> 
+      Retrieved from TechTarget Web Site: 
+      <a href="https://www.techtarget.com/searchSoftwareQuality/tip/The-stages-of-the-SDLC-explained">
+        https://www.techtarget.com/searchSoftwareQuality/tip/The-stages-of-the-SDLC-explained
+      </a>
+    </li><br>
+
+    <li>
+      TpointTech. (2025, March 17). <em>Incremental Model in Software Engineering.</em> 
+      Retrieved from TpointTech Web Site: 
+      <a href="https://www.tpointtech.com/software-engineering-incremental-model">
+        https://www.tpointtech.com/software-engineering-incremental-model
+      </a>
+    </li>
+  </ol>
+</section>
+
+
 
          <!-- Module 2.1 Blog Post Starts here -->
 
