--- a/congerj/index.html
+++ b/congerj/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/styles.css" rel="stylesheet">
-      <title>Student Name | Portfolio</title>
+      <title>Jesse Conger | Portfolio</title>
    </head>
    <body>
 <!-- Page Header  -->
