--- a/andersenc/index.html
+++ b/andersenc/index.html
@@ -43,6 +43,109 @@ https://www.incose.org</li>
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
+          <article>
+
+  <header class="article-header">
+    <h2>Module 1.2 Blog Post</h2>
+  </header>
+
+  <h3>Systems Life Cycle Models in Digital Environments</h3>
+
+  <p>
+    When thinking about technology, people’s minds are usually filled with the thought of the end product. This could be an app, a website, a system, etc., but typically it is something that will already work. What some people forget to think about is everything that happens either before or after the system’s rollout. Your digital systems don’t get constructed once and never evolve. They have a process that includes processes all the way from starting up all the way up to the completion of the life cycle of the system. Understanding what life cycle is, then, also matters because it describes how systems are designed, built and maintained, all the way to ultimately being replaced or altered.
+  </p>
+
+  <p>
+    This process is then divided up under a life-cycle model of systems engineering. It gives the team a way to see what stage a system is at, what it should be as it moves further. Holt (2022) clarifies that life cycle thinking encourages designers to not only target what exactly is the system, but how such a system should be maintained and revised. Especially in the digital world where technology never stays fairly static and user needs always keep going up.
+  </p>
+
+  <p>
+    At a glance, the systems life cycle is a sequence of stages including problem identification, problem solving, design, building, validation, deployment, and support of the system. At some point systems become old and need to be replaced. A good strategy that will prevent jumping to conclusions or designing poorly is considering every one of these phases in-depth on a pre-programmatic timeline. Rather than reacting to issues in the moment, teams can prepare for issues as they surface.
+  </p>
+
+  <h3>Linear Life Cycle Model</h3>
+
+  <p>
+    One of the more conventional approaches to the life cycle is a linear model. All is step by step to the end of the life cycle. Requirements are gathered in the very first place. That is how it is, the system is designed, built, tested, and deployed. Teams rarely go back and modify a stage after the point where the stage has ended, and usually once they have.
+  </p>
+
+  <p>
+    This approach tends to work really well for small projects like these--or systems where requirements are established from the beginning. But linear models are seldom viable for the present digital systems we use. In fact, the technology changes so fast, something is very, very unlikely to hold once a project has been established as a whole. The late-in-development problem can be painful, expensive. This inflexibility can allow outdated or inefficient systems to become outdated soon on opening in the market (Holt, 2022).
+  </p>
+
+  <h3>Iterative Life Cycle Model</h3>
+
+  <p>
+    The majority of teams, therefore, follow iterative life cycle models. Systems are built in cycles in repeating iterations. Rather than taking everything to build at once, teams develop, build, test and iterate smaller parts of the system over weeks (or a year). All design iterations are tested, developed, and validated with the help of feedback, experimentation or insight from feedback, testing, or new data.
+  </p>
+
+  <p>
+    Should a given feature be requested or a bug be cited by users, the group can do the work and fix the software in the next iteration. It also involves good communication and organization, even though it is far more flexible. Consistent change and variation (if goals are not clear) could bog down the project or make them unclear.
+  </p>
+
+  <h3>Incremental Life Cycle Model</h3>
+
+  <p>
+    An approach that was widely considered, however, is the incremental life cycle approach. The approach to incremental development is trying to do smaller chunks of a system where it will end up being usable, in smaller parts, little by little. Teams release system components in small doses rather than tearing it out of a box and waiting for everything to be finalized. Provide additional functionality wherever you can, providing additional functionality up until full system completion.
+  </p>
+
+  <p>
+    This works for users, If they get the system sooner it works better, and developers are continually tweaking the product. Incremental models of growth are particularly useful in digital contexts where systems need to incrementally progress over time. And an app might develop modest features at launch, then incrementally add new features to it as development becomes faster, especially through updates.
+  </p>
+
+  <p>
+    As Holt (2022) has written, doing this lowers risk because it is easier to resolve issues by using just one increment, without compromising the overall system. And systems thinking is favored because every subsequent piece has to mesh well with what’s already in place.
+  </p>
+
+  <h3>Why Life Cycle Models Matter</h3>
+
+  <p>
+    There aren’t some right model of life cycle for all cases. Linear models do provide a shape, but they are inflexible. Innovative, iterative models call for strong coordination: Learnable and adaptable. Incremental approaches are at the middleground between progress and adaptation but require planning in details. In practice and in many real-life projects, teams leverage parts of several models to suit their individual needs.
+  </p>
+
+  <p>
+    Life cycle models are important in the case of digital systems, because these systems are rarely stable. Websites and apps are not static, and need upgrades and security patches and performance improvements and new features. They could bring unexpected problems to bear because there is no clear life cycle plan for each update.
+  </p>
+
+  <p>
+    Feedback loops and components operating in a different way tend to produce unpredictable behavior in systems (Meadows, 2008). A small adjustment in one area starts troubles in another. Inventing the life cycle reduces these kinds of team issues through long-term thinking.
+  </p>
+
+  <p>
+    Designers do not only look forward to the quick-fixes, instead, they consider how such changes may have an impact on the system in the longer term. This leads to better, resilient systems. It is also a cost reduction: systems that were easier to maintain in the past are inherently less likely to depend on a flood of emergency remedies later in the year.
+  </p>
+
+  <p>
+    According to the International Council on Systems Engineering (INCOSE), to design systems prepared for the future, there has to be life cycle consciousness (INCOSE, 2018). Failures will quickly proliferate as digital systems grow more interconnected. Careful, deliberately-built life cycle plans teams assist by a carefully executed life cycle plans help them through this diversity, getting prepared rather than getting caught in the net-jumps before or after that happens.
+  </p>
+
+  <p>
+    In preparation, they are ready to get ready for change yet are not overwhelmed by it. Life cycle models dictate how users experience systems in everyday technology that they are in touch with every day. The concept of the incremental and iterative life cycle is also being used with regular updates, new functions, and improvements. In other words, its application in everyday business processes.
+  </p>
+
+  <p>
+    When they’re fine-tuned, and these processes are the go-to, systems are good, seem smooth and reliable. When they aren’t, users get bugs, crashes or broken features.
+  </p>
+
+  <p>
+    Last but not least, systems life cycle models advocate for planning of technology that is intentional in nature. They can offer designers a reminder that building a system is not about having it work at a single moment, but over time. Digital systems function in a dynamic and fluid environment, so failing to realize this fact virtually guarantees future issues.
+  </p>
+
+  <p>
+    Implementing a life cycle and systems thinking when designing solutions also facilitates design systems that are more adaptable, more reliable, of which the first is a good example. At a time when the world of technology and its applications is evolving at such a fast pace, life cycle thinking is more than helpful, it is necessary for a system to succeed practically speaking.
+  </p>
+
+  <footer class="article-footer">
+    <h3>Sources</h3>
+    <ol>
+      <li>Holt, J. (2022). <em>Systems engineering demystified: Apply the principles of systems engineering to develop complex systems</em> (2nd ed.). Packt Publishing.</li>
+      <li>Meadows, D. H. (2008). <em>Thinking in systems: A primer</em>. Chelsea Green Publishing.</li>
+      <li>International Council on Systems Engineering (INCOSE). (2018). <em>INCOSE Vision 2035: A world in motion</em>. https://www.incose.org</li>
+    </ol>
+  </footer>
+
+</article>
+
 
          <!-- Module 2.1 Blog Post Starts here -->
 
